infra/k8s/post-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-depl
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: posts
  template:
    metadata:
       labels:
        app: posts
    spec:
      containers:
        - name: post
          image: shuhaibzahir/posts
