infra/k8s/comment-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: shuhaibzahir/comments
---
apiVersion: v1
kind: Service
metadata:
  name: comment-cluster-srv
spec:
  selector:
    app: comments
  ports:
    - name: comments-srv
      protocol: TCP
      port: 6060
      targetPort: 6060

---
apiVersion: v1
kind: Service
metadata:
  name: comment-node-srv
spec:
  type: NodePort
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 6060
      targetPort: 6060
