infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: comments
          image: shuhaibzahir/query-srv
---
apiVersion: v1
kind: Service
metadata:
  name: query-cluster-srv
spec:
  selector:
    app: query
  ports:
    - name: query-srv
      protocol: TCP
      port: 7070
      targetPort: 7070
      
---
apiVersion: v1
kind: Service
metadata:
  name: query-node-srv
spec:
  type: NodePort
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 7070
      targetPort: 7070
