infra/k8s/ingress-srv.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations: 
    kubernetes.io/ingress.class: nginx-ingress
